grammar.js
    source_file: ($) => repeat(choice($.line, $.newline, $.line_comment, $.block_comment)),

    // Entity block rule - handle balanced braces (like @eras {...})
    template_block: ($) =>
      seq(
        "@",
        field("block_type", /template\s*\{/),
        repeat(
          choice(
            prec(4, $.premise_line), // Guided premise sentence(s)
            prec(3, $.role_line), // Role / slot definitions
            $.newline
          )
        ),
        "}"
      ),

    // Premise line within template block: @premise: {Slot} text {Slot} …
    // The guided premise sentence; {Slot} tokens reference @role names.
    role_line: ($) =>
      seq(
        /[ \t]*@role\s+/,
        field("role_name", $.role_name),
        optional(field("role_type", $.role_type_hint)),
        ":",
        /[ \t]*/,
        field("role_desc", $.role_desc)
      ),

    // Role name (similar to entity name)
    role_name: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    // Optional type hint in brackets with optional flags:
    //   [character]  [character, required]  [item, optional]  [text]
    //   [character, count=2..4]  [location, count=1..]  [text, count=0..3]
    //   [character, count=4]   (fixed: sugar for count=4..4)
    // First token is the entity type; subsequent comma-separated tokens are
    // slot flags (required | optional | text | multi | count=N | count=N..M).
    // Note: no leading /\s*/ — extras handle inter-token whitespace
    role_type_hint: ($) =>
      seq(
        "[",
        field("type", /[a-z]+/),
        repeat(seq(",", field("flag", /[a-z]+(?:=\d+(?:\.\.\d*)?)?/))),
        "]"
      ),

    // Role description (rest of line)
    role_desc: ($) => /[^\r\n]+/,

    // Entity line for structured parsing within entity blocks
    // Supports either a simple description or a nested object value
    line: ($) =>
      choice(
        $.file_header,
        $.act_header,
        $.scene_header,
        $.cel_header,
        $.content_type_beat,
        $.content_type_treatment,
        $.content_type_narrative,
        $.graveyard_prose, // Single-line graveyard: ^~ <prose>
        $.metadata_line,
        $.image_construct, // Inline image associations (before entity_construct)
        $.entity_construct, // Entity definitions
        $.entity_block, // Entity blocks with braces
        $.cast_block, // @cast { role: {Entity} } mapping blocks
        $.lore_block, // Lore/facts blocks with free-text entries
        $.template_block, // Template blocks with role definitions
        $.image_block, // Image association blocks
        $.import_statement,
        $.adapter_statement,
        $.prose_line // Last resort - lowest precedence
      ),

    newline: ($) => /\r?\n/,

    // Named tokens for entity parts
